# cvs-parser-fun

./: LICENSE  README.md  cvs-parser.cabal
src/: CvsParser.hs
test/: Main.hs  TestCvsParser.hs
