name:                cvs-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cvs-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Jean-Charles Campagne
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  build-depends: base
  exposed-modules: CvsParser
  hs-source-dirs: src
  build-depends: base
               , parsec

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules: TestCvsParser
  build-depends: base
               , Cabal
               , HUnit
               , parsec
               , cvs-parser


executable cvs-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
